--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,3 +51,21 @@
 .equal-height-row .azzle-pricing-wrap {
   height: 100%;
 }
+
+.equal-height-cards {
+  display: flex;
+  flex-wrap: wrap;
+}
+.equal-height-cards > .col-xl-4 {
+  display: flex;
+  flex-direction: column;
+}
+.equal-height-cards > .col-xl-4 > .azzle-pricing-wrap {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.equal-height-cards > .col-xl-4 > .azzle-pricing-wrap > .azzle-pricing-body {
+  flex-grow: 1;
+}
+
