--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,9 +61,9 @@
   flex-direction: column;
 }
 .equal-height-cards > .col-xl-4 > .azzle-pricing-wrap {
-  height: 100%;
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
 }
 .equal-height-cards > .col-xl-4 > .azzle-pricing-wrap > .azzle-pricing-body {
   flex-grow: 1;
