--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,6 +78,12 @@
   height: 100%;
 }
 
+.azzle-pricing-wrap.active h4,
+.azzle-pricing-wrap.active p {
+  color: white;
+}
+
+
 @media (min-width: 768px) {
   .card-grid-container {
     grid-template-columns: repeat(2, 1fr);
