The phone number button dude. its still the same

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -167,6 +167,10 @@ body h6 {
     color: #bd8c2e !important;
 }
 
+.site-header .azzle-header-login-button ul li a:hover {
+    color: red !important;
+}
+
 .azzle-iconbox-wrap .azzle-iconbox-content h3 {
   color: initial !important;
 }
