To WHITE man wtf

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -168,7 +168,7 @@ body h6 {
 }
 
 .site-header .azzle-header-login-button ul li a:hover {
-    color: red !important;
+    color: white !important;
 }
 
 .azzle-iconbox-wrap .azzle-iconbox-content h3 {
