anything below 1450 width, I want the nav to be there

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -194,3 +194,22 @@ body h6 {
   display: flex;
   align-items: center;
 }
+
+/* Custom Nav Breakpoint */
+.main-menu.custom-breakpoint {
+  display: none;
+}
+.azzle-menu-toggle.custom-breakpoint {
+  display: inline-block;
+}
+
+@media (min-width: 1450px) {
+  .main-menu.custom-breakpoint {
+    display: block;
+  }
+  .azzle-menu-toggle.custom-breakpoint {
+    display: none;
+  }
+}
+
+```
