No dont get me wrong. I want the container but when I hover a card. its

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -435,7 +435,7 @@ body h6 {
 
 /* Milestones Carousel */
 .milestones-carousel {
-  padding: 0 50px;
+  padding: 40px 50px;
 }
 
 .milestones-carousel .slick-slide {
