this is looking bad in mobile. the carousel in milestone. make it respon

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -434,6 +434,10 @@ body h6 {
 }
 
 /* Milestones Carousel */
+.milestones-carousel-wrapper {
+  overflow: hidden;
+}
+
 .milestones-carousel {
   padding-block: 40px;
 }
